fix the problem of misplaced title input for too small window sizes

--- a/src/css/tabsense.css
+++ b/src/css/tabsense.css
@@ -92,7 +92,6 @@ a:hover {
     text-align : center;
 }
 .mwin .wtitle div input {
-    width : 300px;
     text-align : center;
     color : #eee;
     background-color : #777;
